[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-skiplist = "0.1.1"
crossbeam-queue = "0.3.8"
log = "0.4.18"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
